database-sql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: database-sql
  name: database-sql
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: database-sql
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/comparativo-mynet: "true"
        io.kompose.service: database-sql
    spec:
      containers:
        - args:
            - --init-file
            - /docker-entrypoint-initdb.d/initdb.sql
            - --default-authentication-plugin=mysql_native_password
          image: database-sql
          name: sql-database
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
          resources: {}
      restartPolicy: Always
status: {}
