unipot-docker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: unipot-docker
  name: unipot-docker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: unipot-docker
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/comparativo-mynet: "true"
        io.kompose.service: unipot-docker
    spec:
      containers:
        - image: unipot-docker
          name: unipot-docker
          ports:
            - containerPort: 8001
          resources: {}
      restartPolicy: Always
status: {}
