user-api-docker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: user-api-docker
  name: user-api-docker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: user-api-docker
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/comparativo-mynet: "true"
        io.kompose.service: user-api-docker
    spec:
      containers:
        - env:
            - name: mysql_host
              value: database-sql
            - name: port
              value: "8002"
            - name: redis_host
              value: redis-service
            - name: unipot_host
              value: unipot-docker
          image: user-api-docker
          name: user-api-docker
          ports:
            - containerPort: 8002
          resources: {}
      restartPolicy: Always
status: {}
