user-api-docker-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: user-api-docker
  name: user-api-docker
spec:
  ports:
    - name: "8002"
      port: 8002
      targetPort: 8002
    - name: 8002-tcp
      port: 8002
      targetPort: 8002
  selector:
    io.kompose.service: user-api-docker
status:
  loadBalancer: {}
